prevent the NSEW radio labels from wrapping.

--- a/metacatui/src/main/webapp/js/themes/snap/css/metacatui.css
+++ b/metacatui/src/main/webapp/js/themes/snap/css/metacatui.css
@@ -860,6 +860,10 @@ header{
 		min-height: 800px;
     }
     
+    radio.inline {
+    	width: 40%;
+    }
+    
     /* Larger modal for guide content */
     .modal.large {
     	width: 80%;
